# drf-auth-example

./: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
billing/: models.py  urls.py  views.py
billing/migrations/: 0001_initial.py
drfauthexample/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: manage
